GraphvizWrapper/include/cgraph.h

/// @}
/// @ingroup cgraph_graph
typedef struct Agraph_s Agraph_t;       ///< graph, subgraph (or hyperedge)
/// @ingroup cgraph_node
typedef struct Agnode_s Agnode_t;       ///< node (atom)
/// @ingroup cgraph_edge
typedef struct Agedge_s Agedge_t;       ///< node pair
typedef struct Agsym_s Agsym_t;         ///< string attribute descriptors

CGRAPH_API int agclose(Agraph_t * g);

CGRAPH_API int agisdirected(Agraph_t * g);

CGRAPH_API int agisundirected(Agraph_t * g);

CGRAPH_API int agisstrict(Agraph_t * g);

/// @}

/// @defgroup cgraph_node nodes
/// @{
CGRAPH_API Agnode_t *agnode(Agraph_t * g, char *name, int createflag);

CGRAPH_API Agnode_t *agsubnode(Agraph_t * g, Agnode_t * n, int createflag);

CGRAPH_API Agnode_t *agfstnode(Agraph_t * g);

CGRAPH_API Agnode_t *agnxtnode(Agraph_t * g, Agnode_t * n);

/// @}

/// @defgroup cgraph_edge edges
/// @{
CGRAPH_API Agedge_t *agedge(Agraph_t * g, Agnode_t * t, Agnode_t * h,
			char *name, int createflag);

CGRAPH_API Agedge_t *agsubedge(Agraph_t * g, Agedge_t * e, int createflag);

CGRAPH_API Agedge_t *agfstin(Agraph_t * g, Agnode_t * n);

CGRAPH_API Agedge_t *agnxtin(Agraph_t * g, Agedge_t * e);

CGRAPH_API Agedge_t *agfstout(Agraph_t * g, Agnode_t * n);

CGRAPH_API Agedge_t *agnxtout(Agraph_t * g, Agedge_t * e);

CGRAPH_API Agedge_t *agfstedge(Agraph_t * g, Agnode_t * n);

CGRAPH_API Agedge_t *agnxtedge(Agraph_t * g, Agedge_t * e, Agnode_t * n);

CGRAPH_API Agraph_t *agroot(void* obj);

CGRAPH_API int agcontains(Agraph_t *, void *);

CGRAPH_API char *agnameof(void *);

CGRAPH_API int agdelete(Agraph_t * g, void *obj);

CGRAPH_API char *agstrdup_html(Agraph_t *, const char *);


CGRAPH_API Agsym_t *agattr(Agraph_t * g, int kind, char *name,
                           const char *value);

CGRAPH_API Agsym_t *agnxtattr(Agraph_t * g, int kind, Agsym_t * attr);

CGRAPH_API int      agcopyattr(void *oldobj, void *newobj);

/// @}

CGRAPH_API char *agget(void *obj, char *name);

CGRAPH_API int agset(void *obj, char *name, const char *value);

CGRAPH_API int agsafeset(void* obj, char* name, const char* value,
                         const char* def);

/// @}

/// @defgroup cgraph_subgraph definitions for subgraphs
/// @{
CGRAPH_API Agraph_t *agsubg(Agraph_t * g, char *name, int cflag);	/* constructor */

CGRAPH_API Agraph_t *agfstsubg(Agraph_t * g);

CGRAPH_API Agraph_t *agnxtsubg(Agraph_t * subg);

CGRAPH_API Agraph_t *agparent(Agraph_t * g);

CGRAPH_API int agdegree(Agraph_t * g, Agnode_t * n, int in, int out);